@@ -7,3 +7,7 @@
 
 2019-7-7	v0.14-alpha.2 TNPLR <hsiaosvideo@gmail.com>
 	* multiboot_header.S: Enter compatibility mode
+
+2019-7-7	v0.14-alpha.3 TNPLR <hsiaosvideo@gmail.com>
+	* loader.S: Fix GDTR's limit value
+	* multiboot_header.S: Load long mode GDTs
